Adding ES5 Shim back in, since CirclCI doesn't have Phantom 2.0 yet

--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Hello?</title>
+    <script src="js-libs/es5-shim.js" type="text/javascript"></script>
     <script src="out/huh-test.js" type="text/javascript"></script>
   </head>
   <body>
